--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
+    "target": "ES5",
+    "lib": ["DOM", "ES5", "ES6", "ES2016", "ES2017"],
+
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"],
